Added a reset button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div class="choice">
+      <button id="x" type="button">X</button>
+      <button id="o" type="button">O</button>
+    </div>
+    <div class="util-btns">
+      <button id="play" type="button">Play</button>
+      <button id="reset" type="button">Reset</button>
+    </div>
+    <div class="container">
+      <button class="point" id="0" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="1" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="2" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="3" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="4" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="5" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="6" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="7" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+      <button class="point" id="8" type="button">
+        <img src="./assets/blank.png" alt="blank" />
+      </button>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
